ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ishop-authorization
  namespace: development
  labels:
    app: ishop-authorization
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ishop-authorization
  template:
    metadata:
      labels:
        app: ishop-authorization
    spec:
      containers:
        - name: ishop-authorization
          image: e2rabi11/authorization:1.0.2-SNAPSHOT
