ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ishop-authorization-service
  namespace: development
spec:
  selector:
    app: ishop-authorization
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
